@@ -14,13 +14,11 @@ my $builder = $class->new(
     license           => 'perl',
     dist_author       => 'Jeff Fearn <Jeff.Fearn@gmail.com>',
     dist_version_from => 'lib/HTML/Tree.pm',
+	create_makefile_pl => 'traditional',
     build_requires    => {
-        'Devel::Cover'        => 0,
         'Module::Build'       => 0,
         'Test::Exception'     => 0,
         'Test::More'          => 0,
-        'Test::Pod::Coverage' => 0,
-        'Test::Perl::Critic'  => 0,
         'HTML::Parser'        => 3.46,
         'HTML::Tagset'        => 3.02,
     },
