@@ -1,0 +1,20 @@
+# Note: this file was auto-generated by Module::Build::Compat version 0.32
+require 5.008001;
+use ExtUtils::MakeMaker;
+WriteMakefile
+(
+          'INSTALLDIRS' => 'site',
+          'NAME' => 'HTML::Tree',
+          'EXE_FILES' => [
+                           'htmltree'
+                         ],
+          'VERSION_FROM' => 'lib/HTML/Tree.pm',
+          'PREREQ_PM' => {
+                           'Test::More' => 0,
+                           'Test::Exception' => 0,
+                           'HTML::Tagset' => '3.02',
+                           'HTML::Parser' => '3.46',
+                           'Module::Build' => 0
+                         }
+        )
+;
